@@ -1,14 +1,14 @@
 /*
  *
- * Copyright (c) 2006/2007 Sam Collett (http://www.texotela.co.uk)
- * Licensed under the MIT License:
- * http://www.opensource.org/licenses/mit-license.php
+ * Copyright (c) 2006-2008 Sam Collett (http://www.texotela.co.uk)
+ * Dual licensed under the MIT (http://www.opensource.org/licenses/mit-license.php)
+ * and GPL (http://www.opensource.org/licenses/gpl-license.php) licenses.
  *
- * Version 2.2.1
+ * Version 2.2.2
  * Demo: http://www.texotela.co.uk/code/jquery/select/
  *
  * $LastChangedDate$
  * $Rev$
  *
  */
-eval(function(p,a,c,k,e,r){e=function(c){return(c<a?'':e(parseInt(c/a)))+((c=c%a)>35?String.fromCharCode(c+29):c.toString(36))};if(!''.replace(/^/,String)){while(c--)r[e(c)]=k[c]||e(c);k=[function(e){return r[e]}];e=function(){return'\\w+'};c=1};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p}('(6($){$.n.M=6(){5 e=6(a,v,t,b){5 c=Z.W("P");c.j=v,c.G=t;5 o=a.y;5 d=o.l;3(!a.p){a.p={};q(5 i=0;i<d;i++){a.p[o[i].j]=i}}3(9 a.p[v]=="Q")a.p[v]=d;a.y[a.p[v]]=c;3(b){c.k=8}};5 a=N;3(a.l==0)7 4;5 f=8;5 m=x;5 g,v,t;3(9(a[0])=="B"){m=8;g=a[0]}3(a.l>=2){3(9(a[1])=="L")f=a[1];h 3(9(a[2])=="L")f=a[2];3(!m){v=a[0];t=a[1]}}4.u(6(){3(4.A.s()!="z")7;3(m){q(5 a 11 g){e(4,a,g[a],f)}}h{e(4,v,t,f)}});7 4};$.n.10=6(b,c,d,e,f){3(9(b)!="E")7 4;3(9(c)!="B")c={};3(9(d)!="L")d=8;4.u(6(){5 a=4;$.Y(b,c,6(r){$(a).M(r,d);3(9 e=="6"){3(9 f=="B"){e.X(a,f)}h{e.J(a)}}})});7 4};$.n.V=6(){5 a=N;3(a.l==0)7 4;5 d=9(a[0]);5 v,C;3(d=="E"||d=="B"||d=="6")v=a[0];h 3(d=="U")C=a[0];h 7 4;4.u(6(){3(4.A.s()!="z")7;3(4.p)4.p=O;5 b=x;5 o=4.y;3(!!v){5 c=o.l;q(5 i=c-1;i>=0;i--){3(v.H==I){3(o[i].j.K(v)){b=8}}h 3(o[i].j==v){b=8}3(b&&a[1]===8)b=o[i].k;3(b){o[i]=O}b=x}}h{3(a[1]===8){b=o[C].k}h{b=8}3(b){4.T(C)}}});7 4};$.n.S=6(f){5 a=9(f)=="Q"?8:!!f;4.u(6(){3(4.A.s()!="z")7;5 o=4.y;5 d=o.l;5 e=[];q(5 i=0;i<d;i++){e[i]={v:o[i].j,t:o[i].G}}e.R(6(b,c){D=b.t.s(),F=c.t.s();3(D==F)7 0;3(a){7 D<F?-1:1}h{7 D>F?-1:1}});q(5 i=0;i<d;i++){o[i].G=e[i].t;o[i].j=e[i].v}});7 4};$.n.18=6(b,d){5 v=b;5 e=9(b);5 c=d||x;3(e!="E"&&e!="6"&&e!="B")7 4;4.u(6(){3(4.A.s()!="z")7 4;5 o=4.y;5 a=o.l;q(5 i=0;i<a;i++){3(v.H==I){3(o[i].j.K(v)){o[i].k=8}h 3(c){o[i].k=x}}h{3(o[i].j==v){o[i].k=8}h 3(c){o[i].k=x}}}});7 4};$.n.17=6(b,c){5 w=c||"k";3($(b).16()==0)7 4;4.u(6(){3(4.A.s()!="z")7 4;5 o=4.y;5 a=o.l;q(5 i=0;i<a;i++){3(w=="15"||(w=="k"&&o[i].k)){$(b).M(o[i].j,o[i].G)}}});7 4};$.n.14=6(b,c){5 d=x;5 v=b;5 e=9(v);5 f=9(c);3(e!="E"&&e!="6"&&e!="B")7 f=="6"?4:d;4.u(6(){3(4.A.s()!="z")7 4;3(d&&f!="6")7 x;5 o=4.y;5 a=o.l;q(5 i=0;i<a;i++){3(v.H==I){3(o[i].j.K(v)){d=8;3(f=="6")c.J(o[i])}}h{3(o[i].j==v){d=8;3(f=="6")c.J(o[i])}}}});7 f=="6"?4:d};$.n.13=6(){5 v=[];4.12("P:k").u(6(){v[v.l]=4.j});7 v}})(19);',62,72,'|||if|this|var|function|return|true|typeof||||||||else||value|selected|length||fn||cache|for||toLowerCase||each|||false|options|select|nodeName|object|index|o1t|string|o2t|text|constructor|RegExp|call|match|boolean|addOption|arguments|null|option|undefined|sort|sortOptions|remove|number|removeOption|createElement|apply|getJSON|document|ajaxAddOption|in|find|selectedValues|containsOption|all|size|copyOptions|selectOptions|jQuery'.split('|'),0,{}))
+eval(function(p,a,c,k,e,r){e=function(c){return(c<a?'':e(parseInt(c/a)))+((c=c%a)>35?String.fromCharCode(c+29):c.toString(36))};if(!''.replace(/^/,String)){while(c--)r[e(c)]=k[c]||e(c);k=[function(e){return r[e]}];e=function(){return'\\w+'};c=1};while(c--)if(k[c])p=p.replace(new RegExp('\\b'+e(c)+'\\b','g'),k[c]);return p}('(6($){$.n.M=6(){5 e=6(a,v,t,b){5 c=Z.W("P");c.j=v,c.G=t;5 o=a.y;5 d=o.l;3(!a.p){a.p={};q(5 i=0;i<d;i++){a.p[o[i].j]=i}}3(9 a.p[v]=="Q")a.p[v]=d;a.y[a.p[v]]=c;3(b){c.k=8}};5 a=N;3(a.l==0)7 4;5 f=8;5 m=x;5 g,v,t;3(9(a[0])=="B"){m=8;g=a[0]}3(a.l>=2){3(9(a[1])=="L")f=a[1];h 3(9(a[2])=="L")f=a[2];3(!m){v=a[0];t=a[1]}}4.u(6(){3(4.A.s()!="z")7;3(m){q(5 a 11 g){e(4,a,g[a],f)}}h{e(4,v,t,f)}});7 4};$.n.10=6(b,c,d,e,f){3(9(b)!="E")7 4;3(9(c)!="B")c={};3(9(d)!="L")d=8;4.u(6(){5 a=4;$.Y(b,c,6(r){$(a).M(r,d);3(9 e=="6"){3(9 f=="B"){e.X(a,f)}h{e.J(a)}}})});7 4};$.n.V=6(){5 a=N;3(a.l==0)7 4;5 d=9(a[0]);5 v,C;3(d=="E"||d=="B"||d=="6")v=a[0];h 3(d=="U")C=a[0];h 7 4;4.u(6(){3(4.A.s()!="z")7;3(4.p)4.p=O;5 b=x;5 o=4.y;3(!!v){5 c=o.l;q(5 i=c-1;i>=0;i--){3(v.H==I){3(o[i].j.K(v)){b=8}}h 3(o[i].j==v){b=8}3(b&&a[1]===8)b=o[i].k;3(b){o[i]=O}b=x}}h{3(a[1]===8){b=o[C].k}h{b=8}3(b){4.T(C)}}});7 4};$.n.S=6(f){5 a=9(f)=="Q"?8:!!f;4.u(6(){3(4.A.s()!="z")7;5 o=4.y;5 d=o.l;5 e=[];q(5 i=0;i<d;i++){e[i]={v:o[i].j,t:o[i].G}}e.R(6(b,c){D=b.t.s(),F=c.t.s();3(D==F)7 0;3(a){7 D<F?-1:1}h{7 D>F?-1:1}});q(5 i=0;i<d;i++){o[i].G=e[i].t;o[i].j=e[i].v}});7 4};$.n.18=6(b,d){5 v=b;5 e=9(b);5 c=d||x;3(e!="E"&&e!="6"&&e!="B")7 4;4.u(6(){3(4.A.s()!="z")7 4;5 o=4.y;5 a=o.l;q(5 i=0;i<a;i++){3(v.H==I){3(o[i].j.K(v)){o[i].k=8}h 3(c){o[i].k=x}}h{3(o[i].j==v){o[i].k=8}h 3(c){o[i].k=x}}}});7 4};$.n.17=6(b,c){5 w=c||"k";3($(b).16()==0)7 4;4.u(6(){3(4.A.s()!="z")7 4;5 o=4.y;5 a=o.l;q(5 i=0;i<a;i++){3(w=="15"||(w=="k"&&o[i].k)){$(b).M(o[i].j,o[i].G)}}});7 4};$.n.14=6(b,c){5 d=x;5 v=b;5 e=9(v);5 f=9(c);3(e!="E"&&e!="6"&&e!="B")7 f=="6"?4:d;4.u(6(){3(4.A.s()!="z")7 4;3(d&&f!="6")7 x;5 o=4.y;5 a=o.l;q(5 i=0;i<a;i++){3(v.H==I){3(o[i].j.K(v)){d=8;3(f=="6")c.J(o[i],i)}}h{3(o[i].j==v){d=8;3(f=="6")c.J(o[i],i)}}}});7 f=="6"?4:d};$.n.13=6(){5 v=[];4.12("P:k").u(6(){v[v.l]=4.j});7 v}})(19);',62,72,'|||if|this|var|function|return|true|typeof||||||||else||value|selected|length||fn||cache|for||toLowerCase||each|||false|options|select|nodeName|object|index|o1t|string|o2t|text|constructor|RegExp|call|match|boolean|addOption|arguments|null|option|undefined|sort|sortOptions|remove|number|removeOption|createElement|apply|getJSON|document|ajaxAddOption|in|find|selectedValues|containsOption|all|size|copyOptions|selectOptions|jQuery'.split('|'),0,{}))
